# MCMC-Explorer

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_metropolis_hastings_demo.ipynb  02_gibbs_sampler_demo.ipynb  03_benchmark_against_mici.ipynb
src/: gibbs_sampler.py  metropolis_hastings.py  target_distributions.py  utils.py
tests/: test_samplers.py
